NPM - MODULE - WEBCAM - PICTURE - PART3

--- a/npm-module-webcam-picture-taker/majPhoto.html
+++ b/npm-module-webcam-picture-taker/majPhoto.html
@@ -45,8 +45,8 @@
 
                             <div class="cropper-dragger" style="width: 130px;height: 130px;" id="cropper">
 
-                                <div class="frame" onmousedown='mydragg.startMoving(this.parentNode,"parent",event);'
-                                    onmouseup='mydragg.stopMoving("parent");'>
+                                <div class="frame" onmousedown='vlib.startMoving(this.parentNode,"parent",event);'
+                                    onmouseup='vlib.stopMoving("parent");'>
                                 </div>
 
                                 <div class="point" id="pr1" style="right: -3px;top: -3px;"></div>
@@ -90,5 +90,5 @@
         </div>
 
 </body>
-<script src="script.js"></script>
+<script src="app.js"></script>
 </html>
